# miosix-kernel

./: meson.build
miosix/arch/common/CMSIS/Device/NXP/MK22FN512xxx12/: readme.txt
miosix/arch/common/CMSIS/Device/NXP/MK22FN512xxx12/Include/: system_MK22F51212.h
miosix/arch/common/CMSIS/Device/ST/STM32F4xx/Source/Templates/: system_stm32f4xx.c
miosix/arch/common/CMSIS/Device/ST/STM32G4xx/Include/: stm32g474xx.h
miosix/arch/common/core/: cache_cortexMx.h  interrupts.h  nxpmk22_os_timer.cpp  stm32f2_f4_l4_f7_h7_os_timer.cpp
miosix/arch/common/drivers/: dcc.cpp  nxpmk22_gpio.cpp  nxpmk22_gpio.h  serial.h  serial_stm32.cpp  serial_stm32.h
miosix/arch/cortexM4_nxpmk22/common/interfaces-impl/: delays.cpp
miosix/arch/cortexM4_nxpmk22/nxpmk22f51212_generic/: nxp_512k+128k_rom.ld
miosix/arch/cortexM4_nxpmk22/nxpmk22f51212_generic/core/: stage_1_boot.cpp
miosix/arch/cortexM4_nxpmk22/nxpmk22f51212_generic/interfaces-impl/: arch_registers_impl.h  bsp.cpp  bsp_impl.h  gpio_impl.h
miosix/arch/cortexM4_stm32f4/stm32f405_generic/core/: stage_1_boot.cpp
miosix/arch/cortexM4_stm32f4/stm32f405_generic/interfaces-impl/: arch_registers_impl.h  bsp.cpp  bsp_impl.h
miosix/arch/cortexM4_stm32g4/common/interfaces-impl/: delays.cpp  gpio_impl.h
miosix/arch/cortexM4_stm32g4/stm32g474re_nucleo/: stm32_512k+128k_rom.ld
miosix/arch/cortexM4_stm32g4/stm32g474re_nucleo/core/: stage_1_boot.cpp
miosix/arch/cortexM4_stm32g4/stm32g474re_nucleo/interfaces-impl/: arch_registers_impl.h  bsp.cpp
miosix/config/: Makefile.inc  miosix_settings.h
miosix/config/arch/cortexM4_nxpmk22/nxpmk22f51212_generic/: board_settings.h
miosix/config/arch/cortexM4_stm32f4/stm32f405_generic/: board_settings.h
miosix/config/arch/cortexM4_stm32g4/stm32g474re_nucleo/: board_settings.h
miosix/filesystem/: file.h
miosix/filesystem/devfs/: devfs.cpp
miosix/interfaces/: atomic_ops.h  endianness.h  os_timer.h
miosix/kernel/: kernel.cpp  logging.h  pthread.cpp  sync.cpp
miosix/kernel/scheduler/priority/: priority_scheduler.h
miosix/stdlib_integration/: libc_integration.cpp  libstdcpp_integration.cpp
